replace a few 2021 assets with 2022 assets

--- a/templates/sbnext-mobile/components/_header.twig
+++ b/templates/sbnext-mobile/components/_header.twig
@@ -16,7 +16,7 @@
 					{% if isMaintenance != true %}
 						<div class="button button-neutral-invis guide-button" id="guide-toggle">{{ icon("list", 20) }}</div>
 					{% endif %}
-						<a href="/" id="logo-container"><img id="logo" src="/assets/logo-wordmark-masthead{% if theme == 'dark' %}-dark{% endif %}.png"></a>
+						<a href="/" id="logo-container"><img id="logo" src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png"></a>
 					</div>
 				</div>
 				{% if isMaintenance != true %}
