--- a/templates/sbnext-desktop/components/_header.twig
+++ b/templates/sbnext-desktop/components/_header.twig
@@ -6,7 +6,7 @@
 						{% if isMaintenance != true %}
 						<div class="button button-neutral-invis masthead-button guide-button" id="guide-toggle">{{ icon("list", 20) }}</div>
 						{% endif %}
-						<a href="/" id="logo-container"><img id="logo" src="/assets/logo-wordmark-masthead{% if theme == 'dark' %}-dark{% endif %}.png"></a>
+						<a href="/" id="logo-container"><img id="logo" src="/assets/logo-wordmark{% if theme == 'dark' %}-dark{% endif %}.png"></a>
 						{% if isMaintenance != true %}
 						<form id="masthead-search" action="/search.php">
 							<input type="text" class="form-control form-long uploader-form" name="tags">
