--- a/templates/sbnext-mobile/components/_header.twig
+++ b/templates/sbnext-mobile/components/_header.twig
@@ -8,7 +8,7 @@
 							<span>{{ icon("search", 16) }}</span>
 						</button>
 						<div id="masthead-search-terms">
-							<label><input type="text" name="query" placeholder="{{ __("Search...") }}"></label>
+							<label><input type="text" name="tags" placeholder="{{ __("Search...") }}"></label>
 						</div>
 					</form>
 				{% endif %}
