--- a/assets/project111/scss/style.scss
+++ b/assets/project111/scss/style.scss
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&display=swap');
 
-$primary: #434cb5;
+$primary: #445cc7;
 $family-sans-serif: "Inter", sans-serif;
 
 /// Load Bulma \\\
