--- a/templates/sbnext-desktop/watch.twig
+++ b/templates/sbnext-desktop/watch.twig
@@ -38,7 +38,11 @@
         <div class="grid">
             <div class="col-md-8">
                 <h1>{{ video.title }}</h1>
-                {{ include('/components/player.twig') }}
+                {% if postType == "video" %}
+                    {{ include('/components/player.twig') }}
+                {% elseif postType == "artwork" %}
+                    <img class="img-fluid" src="{{ video.videofile }}">
+                {% endif %}
 
                 <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
                     <div class="grid">
