--- a/templates/layout111-common/settings.twig
+++ b/templates/layout111-common/settings.twig
@@ -1,7 +1,7 @@
 {% extends "_layout.twig" %}
 {% block title %}{{ __("Settings") }}{% endblock %}
 {% block precontent %}
-    <section class="hero is-primary">
+    <section class="hero is-small is-primary">
         <div class="hero-body">
             <h1 class="title">
                 Settings
