--- a/templates/layout111-common/upload.twig
+++ b/templates/layout111-common/upload.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 {% block precontent %}
-    <section class="hero is-primary">
+    <section class="hero is-small is-primary">
         <div class="hero-body">
             <h1 class="title">Upload</h1>
             <p class="subtitle">Upload. Placeholder.</p>
