--- a/templates/layout111-common/user.twig
+++ b/templates/layout111-common/user.twig
@@ -10,7 +10,7 @@
             display: block;
         }
     </style>
-    <section class="hero is-primary">
+    <section class="hero is-small is-primary">
         <div class="hero-body">
             <div class="columns is-vcentered">
                 <div class="column is-narrow">
