--- a/templates/layout111-common/_layout.twig
+++ b/templates/layout111-common/_layout.twig
@@ -61,6 +61,14 @@
                     </a>
                 </div>
             </div>
+
+            <div class="navbar-item">
+                <p class="control">
+                    <form action="/search.php">
+                        <input class="input is-rounded" name="tags" type="text" placeholder="Search">
+                    </form>
+                </p>
+            </div>
         </div>
         {% if log %}
             <div class="navbar-end is-hidden-mobile">
