--- a/templates/layout111-common/watch.twig
+++ b/templates/layout111-common/watch.twig
@@ -2,11 +2,11 @@
 
 
 {% block content %}
-    <div class="container my-2">
+    <div class="container my-4">
         <div class="columns">
             <div class="column is-8">
                 <div id="video-info">
-                    <div class="columns" id="top-info">
+                    <div class="columns mb-0" id="top-info">
                         <div class="column">
                             <div class="columns is-mobile is-multiline is-gapless is-vcentered">
                                 <div class="column is-1">
