--- a/templates/layout111-common/index.twig
+++ b/templates/layout111-common/index.twig
@@ -1,7 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% block precontent %}
-    <section class="hero is-primary">
+    <section class="hero is-small is-primary">
         <div class="hero-body">
             <p class="title">
                 Welcome to Project 111{% if log %}, {{ userdata.title }}{% endif %}
