--- a/templates/layout111-common/user.twig
+++ b/templates/layout111-common/user.twig
@@ -55,6 +55,12 @@
                                 <p class="title">{{ level_count }}</p>
                             </div>
                         </div>
+                        <div class="level-item has-text-centered">
+                            <div>
+                                <p class="heading">Artwork</p>
+                                <p class="title">{{ art_count }}</p>
+                            </div>
+                        </div>
                     </nav>
                 </div>
             </div>
