Begin artwork page

--- a/templates/layout111-common/_layout.twig
+++ b/templates/layout111-common/_layout.twig
@@ -32,11 +32,11 @@
                 Home
             </a>
 
-            <a class="navbar-item">
+            <a class="navbar-item" href="/browse.php">
                 Videos
             </a>
 
-            <a class="navbar-item">
+            <a class="navbar-item" href="/artwork.php">
                 Artwork
             </a>
 
