Profiles on Retro, Fix Finalium Profiles.
[FINALIUM]: This finally gets rid of the January 2022 profiles, which looked like shit.

[RETRO]: Early implementation of profiles, features comments, stats and the description.

--- a/private/templates/retro-common/_layout.twig
+++ b/private/templates/retro-common/_layout.twig
@@ -15,7 +15,13 @@
 							<img src="/img/banner.gif">
 						</a>
 					</td>
-					<td align="right"> {% if log %} {{ userdata.title }} {% else %} <a href="login.php">Login</a> - <a href="register.php">Register</a> {% endif %} </td>
+					<td align="right">
+						{% if log %}
+						{{ userlink(userdata) }}
+						{% else %}
+						<a href="login.php">Login</a> - <a href="register.php">Register</a>
+						{% endif %}
+					</td>
 				</tr>
 			</tbody>
 		</table>
