--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -1,12 +1,12 @@
 {% extends "_layout.twig" %}
 {% block title %}{{ userpagedata.title }}{% endblock %}
 {% block head %}
-    <meta name="title" content="{{ userpagedata.title }} - cheeseRox">
+    <meta name="title" content="{{ userpagedata.title }} - squareBracket">
     <meta name="description"
           content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
     <meta name="theme-color" content="{{ userpagedata.customcolor }}">
-    <meta property="og:site_name" content="cheeseRox"/>
-    <meta property="og:title" content="{{ userpagedata.title }} - cheeseRox">
+    <meta property="og:site_name" content="squareBracket"/>
+    <meta property="og:title" content="{{ userpagedata.title }} - squareBracket">
     <meta property="og:description"
           content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
     <meta property="og:image" content="{{ domain }}/assets/profpic/{{ userpagedata.name }}.png">
@@ -142,8 +142,31 @@
             <div class="card-body">
                 <b>{{ __("Registered on") }}</b>: {{ userpagedata.joined | date('Y-m-d H:i:s') }}
                 <br><br>
-                <b>{{ __("Last view") }}</b>: {{ userpagedata.lastview | relative_time }}
+                <b>{{ __("Last logged in") }}</b>: {{ userpagedata.lastview | relative_time }}
             </div>
         </div>
     </div>
+	<div id="Discussion" class="tabcontent">
+		{% if log %}
+			<div class="grid" id="commentField">
+				<div class="col-md-1">
+					<img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
+				</div>
+				<div class="col-md-11">
+					<div>
+				<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+						  placeholder="{{ __("Enter comment here.") }}"></textarea>
+					</div>
+					<div class="right">
+						<button id="post-user" class="button button-primary"
+								style="margin-bottom:0;">{{ __("Comment") }}</button>
+					</div>
+				</div>
+			</div>
+		{% endif %}
+		<div id="comment"></div>
+		{% for comment in comments %}
+			{{ comment(comment) }}
+		{% endfor %}
+	</div>
 {% endblock %}
