profile comments now work on retro

--- a/private/templates/retro-common/_layout.twig
+++ b/private/templates/retro-common/_layout.twig
@@ -12,7 +12,7 @@
 				<tr>
 					<td valign="center">
 						<a href="/index.php">
-							<img src="/img/banner.gif">
+							<img src="/img/banner.jpg">
 						</a>
 					</td>
 					<td align="right">
