--- a/private/templates/sbnext-common/components/icon.twig
+++ b/private/templates/sbnext-common/components/icon.twig
@@ -1,3 +1,1 @@
-<svg class="bi" width="{{ size }}" height="{{ size }}" fill="currentColor">
-    <use xlink:href="/vendor/twbs/bootstrap-icons/bootstrap-icons.svg#{{ icon }}"/>
-</svg>
+<i class="bi bi-{{ icon }}" style="font-size: {{ size }}px"></i>
