--- a/private/templates/sbnext-mobile/_layout.twig
+++ b/private/templates/sbnext-mobile/_layout.twig
@@ -16,6 +16,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa81d">
     <meta name="msapplication-TileColor" content="#ffa81d">
     <meta name="theme-color" content="#ffa81d">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
     {% if theme == 'dark' %}
         <link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
