--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -18,8 +18,7 @@
 {% block content %}
     <style>
         .channel-header-bg {
-            background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
-            background-position: center !important;
+            background: url('/assets/backgrounds/{{ userpagedata.name }}.png') linear-gradient(#888, #444) center !important;
             height: 225px;
             padding: 0;
             margin-top: 0;
