start porting two poktwo features
video favorites and news

--- a/private/templates/sbnext-desktop/components/verticalvideobox.twig
+++ b/private/templates/sbnext-desktop/components/verticalvideobox.twig
@@ -12,6 +12,6 @@
         <span class="stat-larger">{{ data.time | relative_time }}</span>
     </div>
     {% if page == "studioIndex" %}
-        <a class="button button-neutral" href="/studio/edit.php?v={{ data.video_id }}">Edit</a>
+        <a class="button button-neutral" href="/public/edit.php?v={{ data.video_id }}">Edit</a>
     {% endif %}
 </div>
