--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -25,10 +25,7 @@
                         <div class="grid">
                             <div class="col-md-4">
                                 <a class="button button-dark"
-                                   href="/studio/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>
-                            </div>
-                            <div class="col-md-8 right">
-                                <a class="button button-dark" href="/studio/">{{ __("Video Manager") }}</a>
+                                   href="/edit.php?v={{ video.video_id }}">{{ __("Edit") }}</a>
                             </div>
                         </div>
                     </div>
