--- a/private/templates/layout111-common/_layout.twig
+++ b/private/templates/layout111-common/_layout.twig
@@ -10,7 +10,7 @@
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="/assets/project111/common.js"></script>
-    <script src="/vendor/npm-asset/vizuaalog--bulmajs/dist/bulma.js"></script>
+    <script src="/bulmajs/bulma.js"></script>
 </head>
 <body>
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
